Version 2.1:
+ Removed the "externalTheta" option to simplify further development
+ Reworte and cleaned up many of the internal functions
+ Further seperated Jaatha and Demographic Model to simplify use of Jaatha
in other areas
+ Added caching for log factorials
+ Ported also msFile2jsfs to Rcpp

Version 2.0.3:
+ Added link to github repo to package description
+ Removed unused optimization strategies

Version 2.0.2:
+ Bugfix: Changed the example fasta file for compatibility with next ape version
+ Bugfix: Fixed encoding issue with bibtex for the packages vignette

Version 2.0.1:
+ Bugfix: Removed debug functions in C++ files that prevented installation on R-2.14

Version 2.0.0:
+ Testing
+ Updated Documentation and Vignette
+ New Feature: Added caching of ms and seqgen commands
+ Changed Feature: Made use of /dev/shm optional
+ Bugfix: Multiple tmp-dirs used during multicore refined search
+ Bugfix: Multiple searches for seqgen binary if running on multiple cores

Version 1.9.12:
+ Fixed a bug with one parameter models
+ Added support for seqgen
+ GLM fitting algorithm can now take more steps to converge
+ Updated the vignette
+ Ported seqgenFile2Jsfs.cc to Rcpp

Version 1.9.11:
+ Added parallelization using doMC.
+ Some improvements to the UI.
+ Updated copyright information.
+ Added import from ape.
+ Updated the vignette.

Version 1.9.10:
+ Use /dev/shm for temp files if available
+ Added "folded" option to use a folded JSFS
+ Added documentation for fasta2jsfs()
+ Made fasta2jsfs calculate the folded JSFS if no outgroup is given.

Version 1.9.9:
+ Reworked the demographic model class to be more flexible and consistent.