@@ -13,4 +13,5 @@ Description:
     each population, it estimates model parameters like the time of separation of both species.
 Depends: R (>= 2.14.2) , methods, foreach (>= 1.2.0-1), phyclust (>= 0.1-14), ape (>= 2.7), Rcpp (>= 0.9.9)
 LinkingTo: Rcpp
-Suggests: doMC (>= 1.1.1)
+Suggests: doMC (>= 1.1.1), knitr
+VignetteBuilder: knitr
