@@ -1,17 +1,0 @@
-<<saveInitialSearchResults, include=FALSE, echo=FALSE>>=
-library(jaatha)
-load('saved_objects/jaatha.Rsave')
-invisible(library(doMC, quietly=TRUE))
-jaatha@cores <- 2
-jaatha@sim.package.size <- 50
-@
-
-<<initialSearch>>=
-jaatha <- Jaatha.initialSearch(jaatha, 
-                               sim=100, 
-                               blocks.per.par=2)
-@
-
-<<saveInitialSearchResults, include=FALSE, echo=FALSE>>=
-save(jaatha, file='saved_objects/start-points.Rsave')
-@
