@@ -1,13 +1,0 @@
-<<setupRefSearch, include=FALSE, echo=FALSE>>=
-library(jaatha)
-load('saved_objects/start-points.Rsave')
-invisible(library(doMC, quietly=TRUE))
-@
-
-<<RefineSearch>>=
-jaatha <- Jaatha.refinedSearch(jaatha, best.start.pos=2, sim=100)
-@
-
-<<SaveRefSearchResults, include=FALSE, echo=FALSE>>=
-save(jaatha, file='saved_objects/jaatha-complete.Rsave')
-@
