@@ -1,6 +1,7 @@
 % \VignetteIndexEntry{Using Jaatha with a custom simulation method}
 % \VignetteDepends{jaatha}
 % \VignettePackage{jaatha}
+% \VignetteEngine{knitr::knitr}
 
 \documentclass[a4paper]{article}
 
@@ -31,7 +32,6 @@ jinfo <- packageDescription("jaatha")
 
 \begin{document}
 
-
 \title{Using Jaatha with a Custom Simulation Method}
 \author{\Sexpr{jinfo$Author}}
 \date{Version \Sexpr{jinfo$Version}}
@@ -40,7 +40,7 @@ jinfo <- packageDescription("jaatha")
 %\section{Introduction}
 \noindent
 We originally designed Jaatha for Demographic Inference in Population 
-Genetics\footnote{Please consult Jaatha's other vignette, ``The Jaatha HowTo'' if you
+Genetics\footnote{Please consult Jaatha's other vignette, ``The Jaatha HowTo'', if you
 want to use Jaatha in for Demographic Inference.}. 
 As the algorithms turned out to work quite well there, we think that it might be
 useful in other situations as well. Jaatha should work in the following
@@ -58,8 +58,8 @@ scenario:
 
 \noindent
 In this document, we will explain how you can use Jaatha in such a situation and
-provide step-by-step instructions for a toy example. We recommend that you read
-``The Jaatha HowTo'' or your publication about Jaatha (\cite{}) first to
+provide step-by-step instructions for a toy example. We recommend that you first read
+``The Jaatha HowTo'' or your current publication about Jaatha (\cite{mathew_why_2013}) to
 understand how the algorithm works.
 
 For the sake of simplicity, we will assume the toy model just consists of $30$
@@ -152,11 +152,11 @@ First, if you want pass additional variables to the simulation function, you can
 use the \verb@opts@-slot of the jaatha object, which holds a normal list. So
 say you don't want to hard code the ten variables per parameter in our model,
 you could call
-<<additionalParameters>>=
+<<setAdditionalParameters>>=
 jaatha@opts[['variable.number']] <- 10 
 @
 after you created the jaatha object with \verb@new@, and use 
-<<additionalParameters>>=
+<<getAdditionalParameters>>=
 jaatha@opts[['variable.number']]
 @
 in \verb@sim.func@ to access this value. Note that this values must be the same
@@ -177,7 +177,7 @@ described in \verb@?Jaatha.initialize@.
 
 \noindent
 So, lets see how Jaatha performs in your toy example:
-<<runJaatha>>=
+<<runJaatha, cache=TRUE>>=
 jaatha <- Jaatha.initialSearch(jaatha, 100, 2)
 jaatha <- Jaatha.refinedSearch(jaatha, 2, 100)
 @
@@ -186,8 +186,8 @@ Hence, Jaatha's best estimates are quite comparable to the direct maximum likeli
 estimates for this simple model.
 
 \bibliographystyle{plainnat}
-\inputencoding{latin1}
-\bibliography{jaatha}
 \inputencoding{utf8}
+\bibliography{jaatha_utf8}
+%\inputencoding{utf8}
 
 \end{document}
