@@ -1,48 +1,0 @@
-@article{naduvilezhath_jaatha:_2011,
-	title = {Jaatha: a fast composite likelihood approach to estimate demographic parameters},
-	volume = {20},
-	shorttitle = {Jaatha},
-	doi = {10.1111/j.1365-294X.2011.05131.x},
-	language = {en},
-	number = {13},
-	journal = {Molecular Ecology},
-	author = {Naduvilezhath, Lisha and Rose, Laura E and Metzler, Dirk},
-	month = jul,
-	year = {2011},
-	pages = {2709--2723},
-},
-
-@article{mathew_composite_2012,
-	title = {A Composite Likelihood Approach to Distinguish Gene Flow from Violations of the Infinite-Sites Model},
-	journal = {Submitted.},
-	author = {Mathew, Lisha and Staab, Paul R. and Rose, Laura E and Metzler, Dirk},
-	month = dec,
-	year = {2012}
-},
-
-@article{hudson_generating_2002,
-	title = {Generating samples under a Wright-Fisher neutral model of genetic variation},
-	volume = {18},
-	doi = {10.1093/bioinformatics/18.2.337},
-	number = {2},
-	journal = {Bioinformatics},
-	author = {Hudson, Richard R.},
-	month = feb,
-	year = {2002},
-	pages = {337 --338},
-},
-
-@article{rambaut_seq-gen:_1997,
-	title = {Seq-Gen: An Application for the Monte Carlo Simulation of {DNA} Sequence Evolution Along Phylogenetic Trees},
-	volume = {13},
-	issn = {1367-4803, 1460-2059},
-	shorttitle = {Seq-Gen},
-	doi = {10.1093/bioinformatics/13.3.235},
-	language = {en},
-	number = {3},
-	journal = {Computer applications in the biosciences : {CABIOS}},
-	author = {Rambaut, Andrew and Grassly, Nicholas C},
-	month = jun,
-	year = {1997},
-	pages = {235--238},
-}
