@@ -1,0 +1,62 @@
+
+@article{naduvilezhath_jaatha:_2011,
+	title = {Jaatha: a fast composite likelihood approach to estimate demographic parameters},
+	volume = {20},
+	shorttitle = {Jaatha},
+	doi = {10.1111/j.1365-294X.2011.05131.x},
+	language = {en},
+	number = {13},
+	urldate = {2012-04-04},
+	journal = {Molecular Ecology},
+	author = {Naduvilezhath, Lisha and Rose, Laura E and Metzler, Dirk},
+	month = jul,
+	year = {2011},
+	keywords = {composite-likelihood method, demography, recent divergence, wild tomatoes},
+	pages = {2709--2723},
+	file = {Naduvilezhath et al. - 2011 - Jaatha a fast composite likelihood approach to es.pdf:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/9ISPVBUP/Naduvilezhath et al. - 2011 - Jaatha a fast composite likelihood approach to es.pdf:application/pdf}
+},
+
+@article{hudson_generating_2002,
+	title = {Generating samples under a Wright-Fisher neutral model of genetic variation},
+	volume = {18},
+	lccn = {0000},
+	doi = {10.1093/bioinformatics/18.2.337},
+	number = {2},
+	urldate = {2012-01-09},
+	journal = {Bioinformatics},
+	author = {Hudson, Richard R.},
+	month = feb,
+	year = {2002},
+	pages = {337 --338},
+	file = {Hudson - 2002 - Generating samples under a Wright-Fisher neutral m.pdf:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/T7FTKRGW/Hudson - 2002 - Generating samples under a Wright-Fisher neutral m.pdf:application/pdf;msdoc.pdf:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/2PRXE3W8/msdoc.pdf:application/pdf}
+},
+
+@article{rambaut_seq-gen:_1997,
+	title = {Seq-Gen: An Application for the Monte Carlo Simulation of {DNA} Sequence Evolution Along Phylogenetic Trees},
+	volume = {13},
+	shorttitle = {Seq-Gen},
+	url = {http://bioinformatics.oxfordjournals.org/content/13/3/235},
+	doi = {10.1093/bioinformatics/13.3.235},
+	language = {en},
+	number = {3},
+	urldate = {2012-04-25},
+	journal = {Computer applications in the biosciences : {CABIOS}},
+	author = {Rambaut, Andrew and Grassly, Nicholas C},
+	month = jan,
+	year = {1997},
+	pages = {235--238},
+	file = {Full Text PDF:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/2NGMP3T5/Rambaut and Grass - 1997 - Seq-Gen An Application for the Monte Carlo Simula.pdf:application/pdf;Seq-Gen.Manual.html:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/W3GURDJX/Seq-Gen.Manual.html:text/html}
+},
+
+@article{mathew_why_2013,
+	title = {Why to account for finite sites in population genetic studies and how to do this with Jaatha 2.0},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/ece3.722/abstract},
+	doi = {10.1002/ece3.722},
+	language = {en},
+	urldate = {2013-09-06},
+	journal = {Ecology and Evolution},
+	author = {Mathew, Lisha A. and Staab, Paul R. and Rose, Laura E. and Metzler, Dirk},
+	year = {2013},
+	keywords = {Demography estimation, infinite-sites model, model violation, mutation rate heterogeneity, next-generation sequencing},
+	file = {Full Text PDF:/home/paul/.mozilla/firefox/z6lailhc.default/zotero/storage/PGZ4MI4N/Mathew et al. - 2013 - Why to account for finite sites in population gene.pdf:application/pdf}
+}
